--- a/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
+++ b/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
@@ -76,7 +76,7 @@
           <mat-icon>autorenew</mat-icon>
           Limpiar
         </button>
-        <button mat-raised-button color="accent" class="btn round" (click)="buscarVentasPaginado(0, 10)" id="btnBuscar">Buscar</button>
+        <button mat-raised-button color="accent" class="btn round" (click)="buscarVentasPaginado(0, 10, true)" id="btnBuscar">Buscar</button>
       </div>
     </div>
   </mat-card>
