Se comienza con la anulacion parcial de la venta.

--- a/src/app/modules/venta/detalle-venta/detalle-venta.component.html
+++ b/src/app/modules/venta/detalle-venta/detalle-venta.component.html
@@ -3,7 +3,7 @@
     <br>
     <div class="row">
       <div class="col-8 mt-2">
-        <p class="titulo">Consultar venta</p>
+        <p class="titulo">{{esAnulacion ? 'Anular venta' : 'Consultar venta'}}</p>
         <p *ngIf="venta.anulada">Venta anulada</p>
       </div>
       <div class="col-4">
