--- a/src/app/modules/venta/detalle-venta/detalle-venta.component.html
+++ b/src/app/modules/venta/detalle-venta/detalle-venta.component.html
@@ -9,7 +9,7 @@
       <div class="col-4">
         <div class="row justify-content-start justify-content-sm-end" style="margin-right: 15px">
           <button
-            *ngIf="!venta.anulada"
+            *ngIf="!venta.anulada && !esAnulacion"
             mat-icon-button
             color="primary"
             matTooltip="Anular venta"
