aviso productos seleccionados

--- a/src/app/modules/venta/detalle-venta/detalle-venta.component.html
+++ b/src/app/modules/venta/detalle-venta/detalle-venta.component.html
@@ -129,6 +129,7 @@
 
       <br>
       <h3 class="subtitulo">Productos vendidos:</h3>
+      <span class="aviso-producto" *ngIf="esAnulacion">Selecciona aquellos productos y la cantidad que el cliente desea devolver.</span>
       <mat-divider class="my-3"></mat-divider>
 
       <mat-card>
