--- a/src/app/modules/venta/detalle-venta/detalle-venta.component.scss
+++ b/src/app/modules/venta/detalle-venta/detalle-venta.component.scss
@@ -2,6 +2,13 @@
   color: #5e5e5e;
 }
 
+.aviso-producto {
+  font-size: 13px;
+  margin-bottom: 10px;
+  font-weight: 400;
+  color: #888;
+}
+
 .img-thumbnail {
   width: 60px;
   height: 60px;
