--- a/src/app/modules/venta/detalle-venta/detalle-venta.component.html
+++ b/src/app/modules/venta/detalle-venta/detalle-venta.component.html
@@ -163,6 +163,13 @@
           <div class="row">
             <div class="col-md-12">
               <mat-table [dataSource]="tableDataSource" matSort class="custom-table">
+                <ng-container matColumnDef="seleccionar">
+                  <mat-header-cell *matHeaderCellDef>SELECCIÓN</mat-header-cell>
+                  <mat-cell *matCellDef="let producto" data-label="Seleccionar">
+                    <mat-checkbox (change)="seleccionarProductoParaAnular(producto)" [checked]="producto.anulado"></mat-checkbox>
+                  </mat-cell>
+                </ng-container>
+
                 <ng-container matColumnDef="imgProducto">
                   <mat-header-cell *matHeaderCellDef>IMAGEN</mat-header-cell>
                   <mat-cell *matCellDef="let producto">
@@ -175,9 +182,15 @@
                   <mat-cell *matCellDef="let producto" data-label="Producto">{{ producto.nombre }}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="cantidadSeleccionada">
+                <ng-container matColumnDef="cantidadSeleccionada" class="text-center">
                   <mat-header-cell *matHeaderCellDef mat-sort-header>CANTIDAD</mat-header-cell>
-                  <mat-cell *matCellDef="let producto" data-label="Cantidad">{{ producto.cantidadSeleccionada }}</mat-cell>
+                  <mat-cell *matCellDef="let producto" data-label="Cantidad">
+                    <div class="d-flex align-items-center col-4 justify-content-center">
+                      <button class="btn btn-light btn-sm" (click)="disminuirCantidad(producto)">-</button>
+                      <input type="text" disabled class="form-control form-control-sm mx-2 text-center quantity-input" value="{{producto.cantidadSeleccionada}}">
+                      <button class="btn btn-light btn-sm" (click)="aumentarCantidad(producto)" [disabled]="producto.cantidadAnulada == producto.cantidadSeleccionada">+</button>
+                    </div>
+                  </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="subTotalVenta">
