seleccionar productos para anular y la cantidad a anular.

--- a/src/app/modules/venta/detalle-venta/detalle-venta.component.scss
+++ b/src/app/modules/venta/detalle-venta/detalle-venta.component.scss
@@ -9,6 +9,14 @@
   color: #888;
 }
 
+.quantity-input {
+  width: 40px;
+}
+
+.mat-header-cell {
+  text-align: center !important;
+}
+
 .img-thumbnail {
   width: 60px;
   height: 60px;
