--- a/src/app/modules/venta/detalle-venta/detalle-venta.component.html
+++ b/src/app/modules/venta/detalle-venta/detalle-venta.component.html
@@ -166,7 +166,7 @@
                 <ng-container matColumnDef="seleccionar">
                   <mat-header-cell *matHeaderCellDef>SELECCIÓN</mat-header-cell>
                   <mat-cell *matCellDef="let producto" data-label="Seleccionar">
-                    <mat-checkbox (change)="seleccionarProductoParaAnular(producto)" [checked]="producto.anulado"></mat-checkbox>
+                    <mat-checkbox (change)="seleccionarProductoParaAnular(producto, $event.checked)" [checked]="producto.anulado"></mat-checkbox>
                   </mat-cell>
                 </ng-container>
 
@@ -178,23 +178,23 @@
                 </ng-container>
 
                 <ng-container matColumnDef="nombre">
-                  <mat-header-cell *matHeaderCellDef mat-sort-header>PRODUCTO</mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef>PRODUCTO</mat-header-cell>
                   <mat-cell *matCellDef="let producto" data-label="Producto">{{ producto.nombre }}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="cantidadSeleccionada" class="text-center">
-                  <mat-header-cell *matHeaderCellDef mat-sort-header>CANTIDAD</mat-header-cell>
-                  <mat-cell *matCellDef="let producto" data-label="Cantidad">
+                <ng-container matColumnDef="cantidadSeleccionada">
+                  <mat-header-cell *matHeaderCellDef class="text-center justify-content-center">CANTIDAD</mat-header-cell>
+                  <mat-cell *matCellDef="let producto" data-label="Cantidad" class="justify-content-center">
                     <div class="d-flex align-items-center col-4 justify-content-center">
-                      <button class="btn btn-light btn-sm" (click)="disminuirCantidad(producto)">-</button>
-                      <input type="text" disabled class="form-control form-control-sm mx-2 text-center quantity-input" value="{{producto.cantidadSeleccionada}}">
+                      <button class="btn btn-light btn-sm" (click)="disminuirCantidad(producto)" [disabled]="producto.cantidadAnulada == 1">-</button>
+                      <input type="text" disabled class="form-control form-control-sm mx-2 text-center quantity-input" [value]="producto.anulado ? producto.cantidadAnulada : producto.cantidadSeleccionada" >
                       <button class="btn btn-light btn-sm" (click)="aumentarCantidad(producto)" [disabled]="producto.cantidadAnulada == producto.cantidadSeleccionada">+</button>
                     </div>
                   </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="subTotalVenta">
-                  <mat-header-cell *matHeaderCellDef mat-sort-header>SUBTOTAL</mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef>SUBTOTAL</mat-header-cell>
                   <mat-cell *matCellDef="let producto" data-label="subTotal">$ {{ producto.subTotalVenta | number:'1.2-2':'es-AR' }}</mat-cell>
                 </ng-container>
 
