--- a/src/app/modules/venta/detalle-venta/detalle-venta.component.html
+++ b/src/app/modules/venta/detalle-venta/detalle-venta.component.html
@@ -186,9 +186,9 @@
                   <mat-header-cell *matHeaderCellDef class="text-center justify-content-center">CANTIDAD</mat-header-cell>
                   <mat-cell *matCellDef="let producto" data-label="Cantidad" class="justify-content-center">
                     <div class="d-flex align-items-center col-4 justify-content-center">
-                      <button class="btn btn-light btn-sm" (click)="disminuirCantidad(producto)" [disabled]="producto.cantidadAnulada == 1">-</button>
+                      <button class="btn btn-light btn-sm" (click)="disminuirCantidad(producto)" [disabled]="!(producto.anulado) || (producto.cantidadAnulada == 1)">-</button>
                       <input type="text" disabled class="form-control form-control-sm mx-2 text-center quantity-input" [value]="producto.anulado ? producto.cantidadAnulada : producto.cantidadSeleccionada" >
-                      <button class="btn btn-light btn-sm" (click)="aumentarCantidad(producto)" [disabled]="producto.cantidadAnulada == producto.cantidadSeleccionada">+</button>
+                      <button class="btn btn-light btn-sm" (click)="aumentarCantidad(producto)" [disabled]="!(producto.anulado) || (producto.cantidadAnulada == producto.cantidadSeleccionada)">+</button>
                     </div>
                   </mat-cell>
                 </ng-container>
@@ -200,7 +200,7 @@
 
 
                 <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
-                <mat-row class="queue-row" *matRowDef="let row; columns: columnas"></mat-row>
+                <mat-row class="queue-row" *matRowDef="let row; columns: columnas" [ngClass]="{'anulada-row': row.anulado}"></mat-row>
 
               </mat-table>
 
