--- a/src/app/modules/venta/detalle-venta/detalle-venta.component.scss
+++ b/src/app/modules/venta/detalle-venta/detalle-venta.component.scss
@@ -17,6 +17,10 @@
   text-align: center !important;
 }
 
+.anulada-row {
+  background-color: var(--bg-venta-anulada);
+}
+
 .img-thumbnail {
   width: 60px;
   height: 60px;
