--- a/src/app/modules/venta/detalle-venta/detalle-venta.component.html
+++ b/src/app/modules/venta/detalle-venta/detalle-venta.component.html
@@ -187,7 +187,12 @@
                   <mat-cell *matCellDef="let producto" data-label="Cantidad" class="justify-content-center">
                     <div class="d-flex align-items-center col-4 justify-content-center">
                       <button class="btn btn-light btn-sm" (click)="disminuirCantidad(producto)" [disabled]="!(producto.anulado) || (producto.cantidadAnulada == 1)">-</button>
-                      <input type="text" disabled class="form-control form-control-sm mx-2 text-center quantity-input" [value]="producto.anulado ? producto.cantidadAnulada : producto.cantidadSeleccionada" >
+                      <input
+                        type="text"
+                        [matTooltip]="producto.anulado ? 'Cantidad original: ' + producto.cantidadSeleccionada : ''"
+                        disabled
+                        class="form-control form-control-sm mx-2 text-center quantity-input"
+                        [value]="producto.anulado ? producto.cantidadAnulada : producto.cantidadSeleccionada">
                       <button class="btn btn-light btn-sm" (click)="aumentarCantidad(producto)" [disabled]="!(producto.anulado) || (producto.cantidadAnulada == producto.cantidadSeleccionada)">+</button>
                     </div>
                   </mat-cell>
