feat: ya no mostrar credito de cta cte
porque asumimos que se devuelve la plata

--- a/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
+++ b/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
@@ -194,7 +194,7 @@
     </mat-card-content>
   </mat-card>
 
-  <h5 *ngIf="!isLoading && !(this.ventas.length > 0)" class="alert alert-secondary text-center">
+  <h5 *ngIf="!isLoading && this.ventas.length == 0" class="alert alert-secondary text-center">
     No se encuentran ventas para mostrar, por favor realice una nueva búsqueda.
   </h5>
 </div>
