--- a/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
+++ b/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
@@ -96,7 +96,7 @@
       </div>
     </div>
 
-    <mat-divider class="my-3" *ngIf="!esRegistro"></mat-divider>
+    <mat-divider class="my-3"></mat-divider>
     <br *ngIf="ventas.length == 0 && !esRegistro">
 
     <!-- loading -->
@@ -137,7 +137,7 @@
 
               <ng-container matColumnDef="fecha">
                 <mat-header-cell *matHeaderCellDef mat-sort-header>FECHA</mat-header-cell>
-                <mat-cell *matCellDef="let venta">{{ venta.fecha | date: 'dd/MM/yyyy' }}</mat-cell>
+                <mat-cell *matCellDef="let venta">{{ venta.fecha | date: 'dd/MM/yyyy HH:mm' }}</mat-cell>
               </ng-container>
 
               <ng-container matColumnDef="formaDePago">
@@ -150,7 +150,7 @@
               <ng-container matColumnDef="estado">
                 <mat-header-cell *matHeaderCellDef>ESTADO</mat-header-cell>
                 <mat-cell *matCellDef="let venta">
-                  {{ venta.canceladaConSaldo === 1 ? 'Cancelada con saldo' : (venta.fechaAnulacion ? 'Anulada' : 'No facturada') }}
+                  {{ venta.fechaFacturacion ? 'Facturada' : 'No facturada' }}
                 </mat-cell>
               </ng-container>
 
@@ -215,11 +215,69 @@
     <h5 *ngIf="!isLoading && this.ventas.length === 0" class="alert alert-secondary text-center">
       No se encuentran ventas de cuenta corriente de este cliente para mostrar.
     </h5>
+
+    <br *ngIf="movimientosCuentaCorriente.length > 0">
+
+    <mat-card [hidden]="!(movimientosCuentaCorriente.length > 0)">
+      <mat-card-content>
+        <div class="row">
+          <div class="col-md-12">
+            <mat-table [dataSource]="tableDataSourceMovimientos" matSort class="custom-table" [class.disabled-table]="formDesactivado || listaMovimientosDeshabilitada">
+
+              <ng-container matColumnDef="id">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>MOVIMIENTO</mat-header-cell>
+                <mat-cell *matCellDef="let movimiento">{{ movimiento.id }}</mat-cell>
+              </ng-container>
+
+              <ng-container matColumnDef="idVenta">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>VENTA</mat-header-cell>
+                <mat-cell *matCellDef="let movimiento">{{ movimiento.idVenta }}</mat-cell>
+              </ng-container>
+
+              <ng-container matColumnDef="monto">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>MONTO</mat-header-cell>
+                <mat-cell *matCellDef="let movimiento">
+                  $ {{ movimiento.monto | number:'1.2-2':'es-AR' }}
+                </mat-cell>
+              </ng-container>
+
+              <ng-container matColumnDef="fecha">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>FECHA</mat-header-cell>
+                <mat-cell *matCellDef="let movimiento">{{ movimiento.fecha | date: 'dd/MM/yyyy HH:mm' }}</mat-cell>
+              </ng-container>
+
+              <ng-container matColumnDef="descripcion">
+                <mat-header-cell *matHeaderCellDef>DESCRIPCION</mat-header-cell>
+                <mat-cell *matCellDef="let movimiento">{{ movimiento.descripcion }}</mat-cell>
+              </ng-container>
+
+              <ng-container matColumnDef="acciones">
+                <mat-header-cell *matHeaderCellDef>ACCIONES</mat-header-cell>
+                <mat-cell *matCellDef="let movimientos" data-label="Acciones">
+
+                </mat-cell>
+              </ng-container>
+
+              <mat-header-row *matHeaderRowDef="columnasMovimientos"></mat-header-row>
+              <mat-row *matRowDef="let row; columns: columnasMovimientos;"></mat-row>
+            </mat-table>
+            <mat-paginator
+              [length]="this.movimientosCuentaCorriente.length"
+              [pageSize]="10"
+              [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+          </div>
+        </div>
+      </mat-card-content>
+    </mat-card>
+
+    <h5 *ngIf="!isLoadingMovimientos && this.movimientosCuentaCorriente.length === 0" class="alert alert-secondary text-center">
+      No se encuentran pagos de cuenta corriente de este cliente para mostrar.
+    </h5>
   </form>
 
   <p class="leyenda" *ngIf="tieneAccionesPendientes">
     <br>
-    ⚠ Esta cuenta posee ventas en estado pendiente (no facturadas o no canceladas con saldo de cuenta corriente) que deben atenderse.
+    ⚠ Esta cuenta posee ventas en deuda que deben atenderse.
   </p>
 
   <mat-divider class="my-3"></mat-divider>
