--- a/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
+++ b/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
@@ -145,13 +145,6 @@
                 <mat-cell *matCellDef="let venta">{{ venta.fecha | date: 'dd/MM/yyyy HH:mm' }}</mat-cell>
               </ng-container>
 
-              <ng-container matColumnDef="formaDePago">
-                <mat-header-cell *matHeaderCellDef>FORMA DE PAGO</mat-header-cell>
-                <mat-cell *matCellDef="let venta">
-                  {{ venta.formaDePago?.nombre }}
-                </mat-cell>
-              </ng-container>
-
               <ng-container matColumnDef="estado">
                 <mat-header-cell *matHeaderCellDef>ESTADO</mat-header-cell>
                 <mat-cell *matCellDef="let venta">
@@ -182,26 +175,14 @@
                     <mat-icon class="ver">visibility</mat-icon>
                   </button>
                   <button
-                    *ngIf="venta.comprobanteAfip.comprobante_pdf_url == null && venta.anulada == 0 && venta.canceladaConSaldo === 0"
+                    class="btn"
                     mat-icon-button
+                    matTooltip="Pagar"
                     color="primary"
-                    matTooltip="Facturar venta"
-                    (click)="facturarVenta(venta)">
-                    <mat-icon class="facturar">attach_money</mat-icon>
+                    (click)="verMovimiento(venta, true)"
+                    [appRole]="['Administrador', 'Cajero', 'Encargado']">
+                    <mat-icon>check_circle_outline</mat-icon>
                   </button>
-                  <div
-                    matTooltip="{{ this.txHaber.value < venta.montoTotal ? 'Haber insuficiente para cancelar esta venta' : 'Cancelar total de venta con saldo' }}"
-                    matTooltipShowDelay="100">
-                    <button
-                      *ngIf="venta.comprobanteAfip.comprobante_pdf_url == null && venta.anulada == 0 && venta.canceladaConSaldo === 0"
-                      mat-icon-button
-                      color="primary"
-                      (click)="cancelarVenta(venta)"
-                      [disabled]="this.txHaber.value < venta.montoTotal">
-                      <mat-icon>check_circle_outline</mat-icon>
-                    </button>
-                  </div>
-
                 </mat-cell>
               </ng-container>
 
@@ -251,15 +232,17 @@
                 <mat-cell *matCellDef="let movimiento">{{ movimiento.fecha | date: 'dd/MM/yyyy HH:mm' }}</mat-cell>
               </ng-container>
 
-              <ng-container matColumnDef="descripcion">
-                <mat-header-cell *matHeaderCellDef>DESCRIPCION</mat-header-cell>
-                <mat-cell *matCellDef="let movimiento">{{ movimiento.descripcion }}</mat-cell>
+              <ng-container matColumnDef="formaDePago">
+                <mat-header-cell *matHeaderCellDef>FORMA DE PAGO</mat-header-cell>
+                <mat-cell *matCellDef="let movimiento">{{ movimiento.formaDePago?.nombre }}</mat-cell>
               </ng-container>
 
               <ng-container matColumnDef="acciones">
                 <mat-header-cell *matHeaderCellDef>ACCIONES</mat-header-cell>
-                <mat-cell *matCellDef="let movimientos" data-label="Acciones">
-
+                <mat-cell *matCellDef="let movimiento" data-label="Acciones">
+                  <button mat-icon-button color="primary" matTooltip="Eliminar" (click)="eliminarMovimiento(movimiento.id)" [appRole]="['Administrador', 'Cajero', 'Encargado']">
+                    <mat-icon class="eliminar">delete</mat-icon>
+                  </button>
                 </mat-cell>
               </ng-container>
 
