feat: detalles en home
(re nada que ver a la rama xdxd)

--- a/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
+++ b/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
@@ -43,7 +43,7 @@
     <div class="row pt-4">
       <div class="col-md">
         <mat-form-field appearance="outline" class="w-100">
-          <mat-label>El cliente nos debe</mat-label>
+          <mat-label>El cliente adeuda</mat-label>
           <input
             matInput
             formControlName="txDebe"
