--- a/src/app/modules/home/ultimos-movimientos/ultimos-movimientos.component.html
+++ b/src/app/modules/home/ultimos-movimientos/ultimos-movimientos.component.html
@@ -35,5 +35,11 @@
         </div>
       </div>
     </div>
+
+    <div class="no-transaction-list-container" *ngIf="ultimosMovimientos.length == 0 && !buscando">
+      <div class="subtitle justify-content-center text-center">
+        No hay movimientos recientes para mostrar.
+      </div>
+    </div>
   </div>
 </mat-card>
