--- a/src/app/modules/home/ultimos-movimientos/ultimos-movimientos.component.scss
+++ b/src/app/modules/home/ultimos-movimientos/ultimos-movimientos.component.scss
@@ -106,3 +106,17 @@ h3 {
   background: var(--bg-hover-items-home);
 }
 
+.subtitle {
+  font-size: 14px;
+  color: #757575;
+}
+
+.no-transaction-list-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 380px;
+  text-align: center;
+  color: #757575;
+}
+
