feat: componente pagar cta cte

--- a/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
+++ b/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
@@ -179,7 +179,7 @@
                     mat-icon-button
                     matTooltip="Pagar"
                     color="primary"
-                    (click)="verMovimiento(venta, true)"
+                    (click)="registrarMovimiento(venta)"
                     [appRole]="['Administrador', 'Cajero', 'Encargado']">
                     <mat-icon>check_circle_outline</mat-icon>
                   </button>
