--- a/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
+++ b/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
@@ -98,18 +98,18 @@
       </div>
     </div>
 
-    <br *ngIf="this.ventas.length > 0">
-    <h3 *ngIf="this.ventas.length > 0">Movimientos de la cuenta:</h3>
+    <br *ngIf="this.movimientosCuentaCorriente.length > 0">
+    <h3 *ngIf="this.movimientosCuentaCorriente.length > 0">Movimientos de la cuenta:</h3>
 
     <mat-divider class="my-3"></mat-divider>
-    <br *ngIf="ventas.length == 0 && !esRegistro">
+    <br *ngIf="movimientosCuentaCorriente.length == 0 && !esRegistro">
 
     <!-- loading -->
     <div class="spinner-wrapper" *ngIf="isLoading">
       <mat-spinner></mat-spinner>
     </div>
 
-    <div class="row pt-4" *ngIf="ventas.length > 0 && !esRegistro">
+    <div class="row pt-4" *ngIf="movimientosCuentaCorriente.length > 0 && !esRegistro">
       <div class="col-md-4">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Número de venta</mat-label>
@@ -120,89 +120,7 @@
       </div>
     </div>
 
-    <br *ngIf="ventas.length > 0">
-
-    <mat-card [hidden]="!(ventas.length > 0)">
-      <mat-card-content>
-        <div class="row">
-          <div class="col-md-12">
-            <mat-table [dataSource]="tableDataSource" matSort class="custom-table" [class.disabled-table]="formDesactivado || listaVentasDeshabilitada">
-
-              <ng-container matColumnDef="id">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>VENTA</mat-header-cell>
-                <mat-cell *matCellDef="let venta">{{ venta.id }}</mat-cell>
-              </ng-container>
-
-              <ng-container matColumnDef="montoTotal">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>MONTO</mat-header-cell>
-                <mat-cell *matCellDef="let venta">
-                  $ {{ venta.montoTotal | number:'1.2-2':'es-AR' }}
-                </mat-cell>
-              </ng-container>
-
-              <ng-container matColumnDef="fecha">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>FECHA</mat-header-cell>
-                <mat-cell *matCellDef="let venta">{{ venta.fecha | date: 'dd/MM/yyyy HH:mm' }}</mat-cell>
-              </ng-container>
-
-              <ng-container matColumnDef="estado">
-                <mat-header-cell *matHeaderCellDef>ESTADO</mat-header-cell>
-                <mat-cell *matCellDef="let venta">
-                  {{ venta.fechaFacturacion ? 'Facturada' : 'No facturada' }}
-                </mat-cell>
-              </ng-container>
-
-              <ng-container matColumnDef="productos">
-                <mat-header-cell *matHeaderCellDef>PRODUCTOS</mat-header-cell>
-                <mat-cell *matCellDef="let venta">
-                  <div class="productos-container">
-                    <ng-container *ngFor="let producto of venta.productos.slice(0, 3)">
-                    <span class="producto-circulo" [matTooltip]="producto.nombre" (click)="verProducto(producto)">
-                    <img [src]="producto.imgProducto" alt="Producto" class="producto-imagen">
-                    </span>
-                    </ng-container>
-                    <span *ngIf="venta.productos.length > 3" matTooltip="{{ getNombresProductos(venta.productos) }}" class="mas-productos">
-                        +{{ venta.productos.length - 3 }}
-                  </span>
-                  </div>
-                </mat-cell>
-              </ng-container>
-
-              <ng-container matColumnDef="acciones">
-                <mat-header-cell *matHeaderCellDef>ACCIONES</mat-header-cell>
-                <mat-cell *matCellDef="let venta" data-label="Acciones">
-                  <button class="btn" mat-icon-button matTooltip="Ver" (click)="verVenta(venta)">
-                    <mat-icon class="ver">visibility</mat-icon>
-                  </button>
-                  <button
-                    class="btn"
-                    mat-icon-button
-                    matTooltip="Pagar"
-                    color="primary"
-                    (click)="registrarMovimiento(venta)"
-                    [appRole]="['Administrador', 'Cajero', 'Encargado']">
-                    <mat-icon>check_circle_outline</mat-icon>
-                  </button>
-                </mat-cell>
-              </ng-container>
-
-              <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
-              <mat-row *matRowDef="let row; columns: columnas;"></mat-row>
-            </mat-table>
-            <mat-paginator
-                           [length]="this.ventas.length"
-                           [pageSize]="10"
-                           [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-          </div>
-        </div>
-      </mat-card-content>
-    </mat-card>
-
-    <h5 *ngIf="!isLoading && this.ventas.length === 0" class="alert alert-secondary text-center">
-      No se encuentran ventas de cuenta corriente de este cliente para mostrar.
-    </h5>
-
-    <br *ngIf="this.movimientosCuentaCorriente">
+    <br *ngIf="this.movimientosCuentaCorriente.length > 0">
 
     <mat-card [hidden]="!(movimientosCuentaCorriente.length > 0)">
       <mat-card-content>
@@ -211,8 +129,13 @@
             <mat-table [dataSource]="tableDataSourceMovimientos" matSort class="custom-table" [class.disabled-table]="formDesactivado || listaMovimientosDeshabilitada">
 
               <ng-container matColumnDef="id">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>PAGO</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header>MOVIMIENTO</mat-header-cell>
                 <mat-cell *matCellDef="let movimiento">{{ movimiento.id }}</mat-cell>
+              </ng-container>
+
+              <ng-container matColumnDef="tipoMovimientoCuentaCorriente">
+                <mat-header-cell *matHeaderCellDef>TIPO MOVIMIENTO</mat-header-cell>
+                <mat-cell *matCellDef="let movimiento">{{ movimiento.tipoMovimientoCuentaCorriente?.nombre }}</mat-cell>
               </ng-container>
 
               <ng-container matColumnDef="idVenta">
@@ -240,6 +163,16 @@
               <ng-container matColumnDef="acciones">
                 <mat-header-cell *matHeaderCellDef>ACCIONES</mat-header-cell>
                 <mat-cell *matCellDef="let movimiento" data-label="Acciones">
+                  <button
+                    *ngIf="movimiento.tipoMovimientoCuentaCorriente?.id == this.getTiposMovimientosCuentaCorrienteEnum.VENTA"
+                    class="btn"
+                    mat-icon-button
+                    matTooltip="Pagar"
+                    color="primary"
+                    (click)="registrarMovimiento(movimiento)"
+                    [appRole]="['Administrador', 'Cajero', 'Encargado']">
+                    <mat-icon>check_circle_outline</mat-icon>
+                  </button>
                   <button mat-icon-button color="primary" matTooltip="Eliminar" (click)="eliminarMovimiento(movimiento.id)" [appRole]="['Administrador', 'Cajero', 'Encargado']">
                     <mat-icon class="eliminar">delete</mat-icon>
                   </button>
@@ -259,14 +192,9 @@
     </mat-card>
 
     <h5 *ngIf="!isLoading && this.movimientosCuentaCorriente.length === 0" class="alert alert-secondary text-center">
-      No se encuentran pagos de cuenta corriente de este cliente para mostrar.
+      No se encuentran movimientos de cuenta corriente de este cliente para mostrar.
     </h5>
   </form>
-
-  <p class="leyenda" *ngIf="tieneAccionesPendientes">
-    <br>
-    ⚠ Esta cuenta posee ventas en deuda que deben atenderse.
-  </p>
 
   <mat-divider class="my-3"></mat-divider>
 
