fix: idventa en pagar cta cte
- Como ya no se usan las ventas en el comp de Cta Cte, tampoco hay que consultar las ventas al pagar
- Pasarle movimiento y obtener el idVenta (pq carajo buscaba todas las ventas solo para eso no se)

--- a/src/app/modules/clientes/pagar-cuenta-corriente/pagar-cuenta-corriente.component.html
+++ b/src/app/modules/clientes/pagar-cuenta-corriente/pagar-cuenta-corriente.component.html
@@ -14,11 +14,7 @@
       <div class="col-md">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Venta</mat-label>
-          <mat-select [formControl]="txVenta">
-            <mat-option *ngFor="let venta of ventas" [value]="venta.id">
-              {{ 'Venta ' + venta.id }}
-            </mat-option>
-          </mat-select>
+          <input matInput [formControl]="txVenta" [value]="this.data.movimiento.idVenta" readonly />
         </mat-form-field>
         <app-error-messages [control]="txVenta"></app-error-messages>
       </div>
