fix: anular venta parcial, subTotalVenta, etc
- Eliminar descripción de los movimientos de cuenta corriente (no se usa)
- Agregar comprobante a movimientos de cuenta corriente
- calcularSubTotal() de cta cte con switch

!!!
- Anular venta parcial (o total) no consideraba el interés de las tarjetas. Se agrega esto al calculo que se muestra en el front.
- Como ahora al anular una venta se devuelve el dinero, se saca la parte de seleccionar la cuenta corriente (ahora solo se muestra como dato si la forma de pago es cuenta corriente nada más)

--- a/src/app/modules/clientes/pagar-cuenta-corriente/pagar-cuenta-corriente.component.html
+++ b/src/app/modules/clientes/pagar-cuenta-corriente/pagar-cuenta-corriente.component.html
@@ -50,21 +50,12 @@
         </mat-form-field>
         <app-error-messages [control]="txFormaDePago"></app-error-messages>
       </div>
+
+      <p class="leyenda" (click)="setearTotalVentaEnMonto()">
+        Monto total de la venta: $ {{this.data.movimiento.monto | number:'1.2-2':'es-AR' }}
+      </p>
     </div>
 
-    <div class="row pt-4">
-      <div class="col-md">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Comentario</mat-label>
-          <textarea matInput [formControl]="txComentario"
-                    cdkTextareaAutosize
-                    cdkAutosizeMinRows="3"
-                    cdkAutosizeMaxRows="10">
-          </textarea>
-        </mat-form-field>
-        <app-error-messages [control]="txComentario"></app-error-messages>
-      </div>
-    </div>
   </form>
 
   <mat-divider class="my-3"></mat-divider>
