--- a/src/app/modules/venta/detalle-venta/detalle-venta.component.scss
+++ b/src/app/modules/venta/detalle-venta/detalle-venta.component.scss
@@ -46,3 +46,10 @@
     min-width: 700px;  /* Reducimos el ancho mínimo en pantallas más pequeñas */
   }
 }
+
+.aviso-total-anulado {
+  font-size: 13px;
+  margin-bottom: 10px;
+  font-weight: 400;
+  color: #888;
+}
