--- a/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.scss
+++ b/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.scss
@@ -76,3 +76,12 @@
 h3 {
   color: #5e5e5e;
 }
+
+button.button-pay[disabled] {
+  opacity: 0.5;
+  pointer-events: auto;
+}
+
+button.button-pay[disabled]:hover {
+  pointer-events: auto;
+}
