feat: validar cta cte en cliente
- Si haces una venta en cuenta corriente, validá que el cliente que estás seleccionado tenga una cuenta corriente creada... sino da error.

--- a/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
+++ b/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
@@ -167,7 +167,7 @@
                     *ngIf="movimiento.tipoMovimientoCuentaCorriente?.id == this.getTiposMovimientosCuentaCorrienteEnum.VENTA"
                     class="btn button-pay"
                     mat-icon-button
-                    matTooltip="{{ movimiento.anulado == 1 ? 'La venta fue anulada totalmente' : 'Pagar' }}"
+                    matTooltip="{{ movimiento.anulado == 1 ? 'No puedes efectuar pagos para ventas anuladas totalmente' : 'Pagar' }}"
                     color="primary"
                     (click)="registrarMovimiento(movimiento)"
                     [appRole]="['Administrador', 'Cajero', 'Encargado']"
