--- a/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
+++ b/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
@@ -43,7 +43,7 @@
     <div class="row pt-4">
       <div class="col-md">
         <mat-form-field appearance="outline" class="w-100">
-          <mat-label>El cliente adeuda</mat-label>
+          <mat-label>Debe</mat-label>
           <input
             matInput
             formControlName="txDebe"
@@ -59,7 +59,7 @@
 
       <div class="col-md">
         <mat-form-field appearance="outline" class="w-100">
-          <mat-label>El cliente pagó</mat-label>
+          <mat-label>Haber</mat-label>
           <input
             matInput
             formControlName="txHaber"
@@ -75,15 +75,7 @@
 
       <div class="col-md">
         <mat-form-field appearance="outline" class="w-100">
-          <mat-label>
-            {{
-              (!txDebe.value && !txHaber.value)
-                ? 'Saldo general'
-                : (Math.abs(txDebe.value || 0) > Math.abs(txHaber.value || 0))
-                  ? 'Saldo a favor del negocio'
-                  : 'Saldo a favor del cliente'
-            }}
-          </mat-label>
+          <mat-label>Saldo</mat-label>
           <input
             matInput
             formControlName="txBalance"
