--- a/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
+++ b/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
@@ -65,7 +65,7 @@
             formControlName="txHaber"
             type="text"
             mask="separator.2"
-            [prefix]="(txHaber.value || 0) > 0 ? '-$ ' : '$ '"
+            prefix="$ "
             thousandSeparator=","
             [allowNegativeNumbers]="true"
           />
@@ -171,11 +171,12 @@
                     *ngIf="movimiento.tipoMovimientoCuentaCorriente?.id == this.getTiposMovimientosCuentaCorrienteEnum.PAGO"
                     mat-icon-button
                     color="primary"
-                    matTooltip="Eliminar"
-                    (click)="eliminarMovimiento(movimiento.id)"
+                    matTooltip="Devolver pago"
+                    (click)="devolverPago(movimiento)"
                     [appRole]="['Administrador', 'Cajero', 'Encargado']">
-                    <mat-icon class="eliminar">delete</mat-icon>
+                    <mat-icon class="devolver">undo</mat-icon>
                   </button>
+
                   <button
                     *ngIf="movimiento.tipoMovimientoCuentaCorriente?.id == this.getTiposMovimientosCuentaCorrienteEnum.PAGO"
                     mat-icon-button
@@ -184,6 +185,16 @@
                     (click)="imprimirComprobanteDePago(movimiento)"
                     [appRole]="['Administrador', 'Cajero', 'Encargado']">
                     <mat-icon class="imprimir">print</mat-icon>
+                  </button>
+
+                  <button
+                    *ngIf="movimiento.tipoMovimientoCuentaCorriente?.id == this.getTiposMovimientosCuentaCorrienteEnum.PAGO"
+                    mat-icon-button
+                    color="primary"
+                    matTooltip="Eliminar"
+                    (click)="eliminarMovimiento(movimiento.id)"
+                    [appRole]="['Administrador', 'Cajero', 'Encargado']">
+                    <mat-icon class="eliminar">delete</mat-icon>
                   </button>
                 </mat-cell>
               </ng-container>
